# channel-hound

./: .gitignore  CONTRIBUTING.md  README.md  init_db.sh  manage.py  pyproject.toml  requirements.txt  scrapy.cfg
channel_hound/: items.py  pipelines.py  settings.py  urls.py  wsgi.py
channel_hound/channel_hound/: dtv_channels.json  middlewares.py  settings.py
channel_hound/channel_hound/spiders/: directvnow.py  hulu.py  psvue.py  sling.py  youtubetv.py
channel_hound/settings/: __init__.py  base.py  dev.py
channel_hound/spiders/: directvnow.py  hulu.py  philo.py  psvue.py  youtubetv.py
services/: models.py
services/migrations/: 0001_initial.py
